tests/checker/good/libdiamond.scilla
scilla_version 0

import TestLibDiamondTop

library LibDiamond

contract TestContr1
()
