tests/checker/bad/bad_adt_lib_1.scilla
scilla_version 0

import BadADTLib1

(***************************************************)
(*               Associated library                *)
(***************************************************)

contract BadLib ()
